Check for edit by checking edit date, not status

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -356,6 +356,10 @@ a.logo
 		right: 0
 		display: block
 		font-size: 0.9em
+
+	& .edited
+		opacity: 0.9
+
 	& .flag:hover, & .flag:focus
 		text-decoration: none
 	& .flag:after
