--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -119,9 +119,9 @@
 						<span class="meta">
 							<span class="date">
 							Posted <span title="{{post.creation_date.strftime('%H:%M on %A %d, %B %Y')}}">{{post.pretty_creation_date}}</span>
-							{% if post.status == 'edited' %}
-								<span title="Last edited {{post.pretty_edit_date}}">
-									<span class="disabled">(edited)</span>
+							{% if post.edit_date %}
+								<span class="edited" title="Last edited {{post.pretty_edit_date}}">
+									(edited)
 								</span>
 							{% endif %}
 							{% if post.status == 'deleted' %}
