--- a/blender-today/application/templates/posts/form.html
+++ b/blender-today/application/templates/posts/form.html
@@ -1,99 +1,124 @@
 <form id="submit_post_form" role="form" method="POST" enctype="multipart/form-data" action="{{url_for('posts.submit')}}">
-    {{ submit_post_form.hidden_tag() }}
+	{{ submit_post_form.hidden_tag() }}
 
-    {# What type is it? #}
-    <div class="row">
-        <div class="col-md-12">
-            <h3>What type of post is it?</h3>
-        </div>
-    </div>
-    <div class="row post-submit-field-type">
-        <div class="col-md-6">
-            <a data-role="button" data-val="1" class="select-change post-submit-field-type-button">
-                <div class="post-submit-field-type-button-icon">
-                    <span class="fa-stack fa-2x fa-lg">
-                        <i class="fa fa-circle-thin fa-stack-2x"></i>
-                        <i class="fa fa-stack-1x fa-link"></i>
-                    </span>
-                </div>
-                <div class="post-submit-field-type-button-text">
-                    It's a Link
-                    <small>The title will link directly there</small>
-                </div>
-            </a>
-        </div>
-        <div class="col-md-6">
-            <a data-role="button" data-val="2" class="select-change post-submit-field-type-button">
-                <div class="post-submit-field-type-button-icon">
-                    <span class="fa-stack fa-2x fa-lg">
-                        <i class="fa fa-circle-thin fa-stack-2x"></i>
-                        <i class="fa fa-stack-1x fa-file-text-o"></i>
-                    </span>
-                </div>
-                <div class="post-submit-field-type-button-text">
-                    It's an Article
-                    <small>Type in </small>
-                </div>
-            </a>
-        </div>
-    </div>
+	<div class="post-submit">
 
-    <div class="row post-submit-div-title">
-        <div class="col-md-12">
-            <div class="form-group">
-                {{ submit_post_form.title(class='form-control post-submit-field-title', placeholder='Pick a Title') }}
-                {% if submit_post_form.title.errors %}
-                    <ul class="error">
-                        {% for error in submit_post_form.title.errors %}<li>{{ error }}</li>{% endfor %}
-                    </ul>
-                {% endif %}
-            </div>
-        </div>
-    </div>
+		{# What type is it? #}
+		<div class="row post-submit-title">
+			<div class="col-md-12">
+				<h3>What do you want to submit?</h3>
+			</div>
+		</div>
 
-    <div class="row post-submit-div-url post-submit-link">
-        <div class="col-md-12">
-            <div class="form-group">
-                {{ submit_post_form.url(class='form-control post-submit-field-url', placeholder='URL (with http://)') }}
-            </div>
-        </div>
-    </div>
+		<div class="row post-submit-field-type">
+			<div class="col-md-6">
+				<a data-role="button" data-val="1" class="select-change post-submit-field-type-button">
+					<div class="post-submit-field-type-button-icon">
+						<span class="fa-stack fa-2x fa-lg">
+							<i class="fa fa-circle-thin fa-stack-2x"></i>
+							<i class="fa fa-stack-1x fa-link"></i>
+						</span>
+					</div>
+					<div class="post-submit-field-type-button-title">
+						Submit a Link
+					</div>
+					<div class="post-submit-field-type-button-description">
+						No text, I just want to link somewhere
+					</div>
+				</a>
+			</div>
+			<div class="col-md-6">
+				<a data-role="button" data-val="2" class="select-change post-submit-field-type-button">
+					<div class="post-submit-field-type-button-icon">
+						<span class="fa-stack fa-2x fa-lg">
+							<i class="fa fa-circle-thin fa-stack-2x"></i>
+							<i class="fa fa-stack-1x fa-file-text-o"></i>
+						</span>
+					</div>
+					<div class="post-submit-field-type-button-title">
+						Submit an Article
+					</div>
+					<div class="post-submit-field-type-button-description">
+						I'll write down 
+					</div>
+				</a>
+			</div>
+		</div>
 
-    <div class="row post-submit-div-category">
-        <div class="col-md-6">
-            What Category does it fit in?
-        </div>
-        <div class="col-md-6">
-            <div class="form-group">
-                {{ submit_post_form.category_id(class='form-control post-submit-field-category', placeholder='Category') }}
-            </div>
-        </div>
-    </div>
+		<div class="row post-submit-div-title">
+			<div class="col-md-12">
+				<div class="form-group">
+					<label>Title</label>
+					{{ submit_post_form.title(
+							class='form-control post-submit-field-title',
+							placeholder='Title for your submission. e.g: "My latest work"') }}
+					{% if submit_post_form.title.errors %}
+						<ul class="error">
+							{% for error in submit_post_form.title.errors %}<li>{{ error }}</li>{% endfor %}
+						</ul>
+					{% endif %}
+				</div>
+			</div>
+		</div>
 
-    <div class="row post-submit-div-content post-submit-article">
-        <div class="col-md-12">
-            <div class="form-group">
-                {{ submit_post_form.content(class='form-control post-submit-field-content', id='post_content') }}
-            </div>
-        </div>
-    </div>
+		<div class="row post-submit-div-url post-submit-link">
+			<div class="col-md-12">
+				<div class="form-group">
+					<label>URL (with http://)</label>
+					{{ submit_post_form.url(
+						 class='form-control post-submit-field-url',
+						 placeholder='URL including http:// . e.g: "http://gooseberry.blender.org"') }}
+				</div>
+			</div>
+		</div>
 
-    <div class="row post-submit-div-picture">
-        <div class="col-md-12">
-            <div class="form-group">
-                {{ submit_post_form.picture(class='form-control post-submit-field-picture') }}
-            </div>
-        </div>
-    </div>
+		<div class="row post-submit-div-content post-submit-article">
+			<div class="col-md-12">
+				<div class="form-group">
+					<label>Description</label>
+					{{ submit_post_form.content(class='form-control post-submit-field-content', id='post_content') }}
+				</div>
+			</div>
+		</div>
 
-    <div class="post-submit-div-submit">
-        <button type="submit" class="btn btn-default btn-block btn-success submit post-submit-field-submit" value="Go">
-            <i class="fa fa-check"></i> Submit
-        </button>
-    </div>
+		<div class="row post-submit-div-category">
+			<div class="col-md-6">
+				<span>Which Category does it fit in?</span>
+			</div>
+			<div class="col-md-6">
+				<div class="form-group">
+					{{ submit_post_form.category_id(class='form-control post-submit-field-category', placeholder='Category') }}
+				</div>
+			</div>
+		</div>
 
-        <select id="post_type_id" name="post_type_id" placeholder="Post Type" class="hidden">
-            <option value="1">Link</option>
-            <option value="2">Text</option>
-        </select>
+		<div class="row post-submit-div-picture">
+			<div class="col-md-6">
+				<span>Make it prettier with a picture?</span>
+			</div>
+			<div class="col-md-6">
+				<div class="form-group">
+					{{ submit_post_form.picture(class='form-control post-submit-field-picture') }}
+				</div>
+			</div>
+		</div>
+
+		<div class="post-submit-div-submit">
+			<div class="row">
+				<div class="col-md-6">
+
+				</div>
+				<div class="col-md-6">
+					<button type="submit" class="btn btn-default btn-block btn-success submit post-submit-field-submit" value="Go">
+						<i class="fa fa-check"></i> Submit Post
+					</button>
+				</div>
+			</div>
+		</div>
+
+		<select id="post_type_id" name="post_type_id" placeholder="Post Type" class="hidden">
+			<option value="1">Link</option>
+			<option value="2">Text</option>
+		</select>
+	</div> <!-- post-submit -->
 </form>
