--- a/blender-today/application/templates/posts/form.html
+++ b/blender-today/application/templates/posts/form.html
@@ -110,7 +110,7 @@
 				</div>
 				<div class="col-md-6">
 					<button type="submit" class="btn btn-default btn-block btn-success submit post-submit-field-submit" value="Go">
-						<i class="fa fa-check"></i> Submit Post
+						<i class="fa fa-check"></i> Submit!
 					</button>
 				</div>
 			</div>
