--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -635,10 +635,12 @@ a.logo
 .post-submit-div-url
 	margin-top: 0
 
+.post-submit-div-title
+	margin-top: 20px
+
 .post-submit-field-type
 	display: block
 	margin-top: 20px
-	margin-bottom: 20px
 
 	& .post-submit-field-type-button
 		display: inline-block
