Tiny tweaks here and there

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -216,6 +216,7 @@ a.logo
 	position: absolute
 	top: 15px
 	right: 5px
+	+text-shadow(1px, 1px, 0, black, 0.2)
 	+media-xs
 		width: 45px
 		height: 45px
