--- a/blender-today/application/templates/posts/index.html
+++ b/blender-today/application/templates/posts/index.html
@@ -38,7 +38,7 @@
 					</a>
 				</div>
 
-				{# Post Circle #}
+				{# Post circle thingie #}
 				<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}">
 					<div class="post-index-item-type {{post.post_type.url}}" {% if post.picture %}style="background: url({{post.thumbnail('s')}}) top left no-repeat"{% endif %}>
 						{% if post.post_type.url == 'link' %}
@@ -48,6 +48,7 @@
 						{% endif %}
 					</div>
 				</a>
+
 			</div>
 
 			<div class="col-md-10 col-sm-10 col-xs-10">
@@ -60,6 +61,18 @@
 				</a>
 
 				<div class="post-index-item-details" href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}">
+					{% if post.picture %}
+					<span class="post-index-item-picture-collapse"><i class="fa fa-minus"></i></span>
+					<span class="post-index-item-picture-expand"><i class="fa fa-picture-o"></i></span>
+					<img class="post-index-item-picture"
+							 title="Click and drag to resize"
+							 data-rel="{{post.thumbnail('l')}}" src=""/>
+					<span class="separator"></span>
+					{% endif %}
+
+
+					{{post.post_type}}
+					<span class="separator"></span>
 					<a href="{{url_for('index')}}{{post.category.url}}">{{post.category}}</a>
 					<span class="separator"></span>
 					<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}#comments">
@@ -77,16 +90,6 @@
 							{{post.user.username}}
 						{% endif %}
 					</a>
-
-					{% if post.picture %}
-					<span class="separator"></span>
-					<span class="post-index-item-picture-collapse"><i class="fa fa-minus"></i></span>
-					<span class="post-index-item-picture-expand"><i class="fa fa-picture-o"></i></span>
-					<img class="post-index-item-picture"
-							 title="Click and drag to resize"
-							 data-rel="{{post.thumbnail('l')}}" src=""/>
-					{% endif %}
-
 				</div>
 			</div>
 		</div>
