Fix for bad JS on Chrome

--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -334,7 +334,8 @@
 		});
 
 
-		var print_comment = function(comment, reply='') {
+		var print_comment = function(comment, reply) {
+		if (typeof(reply)==='undefined') reply = '';
 		comment = 
 		'<div class="post-view-comments-item '+ reply +'flash"> \
 			<div class="row"> \
