--- a/blender-today/application/templates/_sidebar.html
+++ b/blender-today/application/templates/_sidebar.html
@@ -1,4 +1,4 @@
-    <div class="navbar navbar-default navbar-static-top" role="navigation">
+    <div class="navbar navbar-default" role="navigation">
 
         <nav>
           <ul class="nav navbar-nav">
