Tweaks to reply comment

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -513,6 +513,13 @@ a.logo
 	&.flash
 		animation: effect-flash-fadeout 2s ease forwards
 
+div#post-comment-reply-container
+	padding: 20px
+	margin-left: 70px
+
+#form-comment-reply-submit
+	margin-top: 10px
+
 @-webkit-keyframes effect-flash-fadeout
 	0%
 		background-color: white
@@ -1317,7 +1324,7 @@ body.cke_editable.cke_editable_themed.cke_contents_ltr
 	font-family: $font_body !important
 	font-size: 1.2em
 
-span#cke_1_top, span#cke_2_top
+span.cke_top
 	padding: 5px 5px 0 5px !important
 	border: none
 	background-image: none
