Moar tweaks to reply stuff

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -514,11 +514,17 @@ a.logo
 		animation: effect-flash-fadeout 2s ease forwards
 
 div#post-comment-reply-container
-	padding: 20px
-	margin-left: 70px
+	padding: 20px 20px 60px 90px
+	background-color: $color_brand_main
 
 #form-comment-reply-submit
 	margin-top: 10px
+	background-color: $color_brand_secondary
+	border: none
+	width: 50%
+	float: right
+	display: block
+	+box-shadow(2px, 2px, 0, black, .1)
 
 @-webkit-keyframes effect-flash-fadeout
 	0%
