--- a/blender-today/application/templates/posts/form.html
+++ b/blender-today/application/templates/posts/form.html
@@ -20,7 +20,7 @@
 						</span>
 					</div>
 					<div class="post-submit-field-type-button-title">
-						Submit a Link
+						Submit Link
 					</div>
 					<div class="post-submit-field-type-button-description">
 						No text, I just want to link somewhere
@@ -36,10 +36,10 @@
 						</span>
 					</div>
 					<div class="post-submit-field-type-button-title">
-						Submit an Article
+						Submit Text
 					</div>
 					<div class="post-submit-field-type-button-description">
-						I'll write down 
+						I'll write a nice article
 					</div>
 				</a>
 			</div>
