--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -1329,6 +1329,28 @@ li.navbar-submit a:focus,
 		transform: scale3d(0.9, 0.9, 1)
 
 
+/* Errors */
+.error-404
+	background-color: #f65441
+	text-align: center
+	color: white
+	& img
+		margin: 60px auto 10px auto
+	& .error-goback
+		font-size: 0.9em
+		color: white
+		margin: 20px auto
+		& a
+			color: white
+	& h1
+		font-size: 3.4em
+		margin: 0
+		padding: 0
+	& h2
+		font-size: 2.2em
+		margin: 20px 0 0 0
+		padding: 0
+
 /* CKEditor Overrides */
 .cke_chrome
 	font-family: $font_body !important
