--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="news, community, blender, animation, 3d" />
     <meta name="description" content="Community-driven Blender News"/>
     <meta name="author" content="Blender Today"/>
+    <meta name="theme-color" content="#0092A0">
     <meta name="csrf-token" content="{{ csrf_token() }}">
 
     {% if config.USE_ASSETS_CDN %}
