--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -509,7 +509,7 @@ a.logo
 		+text-shadow(1px, 1px, 0, white, 0.8)
 	&.reply
 		padding-left: 80px
-		border-top: thin dashed lighten($color_text, 60%)
+		border-left: thick solid $color_brand_main
 	&.flash
 		+text-shadow(1px, 1px, 0, black, 0.3)
 		animation: effect-flash-fadeout 1.5s ease forwards
