--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -1076,6 +1076,18 @@ fieldset
 			+user-select-none
 			+pointer-events-none
 
+/* badges */
+.badge
+	font-family: $font_body
+	background-color: transparent
+	color: $color_brand_secondary
+	height: 25px
+	width: 25px
+	padding: 6px 5px 5px 5px
+	+border-radius(50%)
+
+/* // BOOTSTRAP OVERRIDES */
+
 /* Submit Button */
 .navbar-submit
 	font-family: $font_headings
